--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cmake>=4.0.3",
     "networkx>=3.5",
+    "pybind11[global]>=3.0.0",
     "questionary>=2.1.0",
 ]
