--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "cmake>=4.0.3",
+    "logzero>=1.7.0",
     "networkx>=3.5",
     "pybind11[global]>=3.0.0",
     "questionary>=2.1.0",
+    "torch>=2.7.1",
+    "torch-geometric>=2.6.1",
 ]
