sat to mis graph loader

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "logzero>=1.7.0",
     "networkx>=3.5",
     "pybind11[global]>=3.0.0",
+    "python-sat>=1.8.dev19",
     "questionary>=2.1.0",
     "torch>=2.7.1",
     "torch-geometric>=2.6.1",
