--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pybind11[global]>=3.0.0",
     "python-sat>=1.8.dev19",
     "questionary>=2.1.0",
+    "scipy>=1.16.2",
     "torch>=2.7.1",
     "torch-geometric>=2.6.1",
     "torch-scatter>=2.1.2",
